# streamdeck-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install_skill.py  mdi_icons.py  profile_manager.py  profile_server.py  pyproject.toml  release-please-config.json  server.json  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pr-title.yml  release.yml  security.yml
skills/streamdeck-profile/: SKILL.md
streamdeck_assets/: __init__.py  mdi-meta.json
streamdeck_assets/skill/streamdeck-designer/: SKILL.md
streamdeck_assets/skill/streamdeck-designer/assets/: env-template.txt
streamdeck_assets/skill/streamdeck-designer/assets/recipes/: dev-nordic.json  music-retrowave.json  streamer-hello-kitty.json
streamdeck_assets/skill/streamdeck-designer/references/: dials-and-touchstrip.md  hardware.md  icons.md  integrations.md  patterns.md  sdk-primer.md  sdk-urls.md  themes.md  troubleshooting.md
streamdeck_plugin/: __init__.py
streamdeck_plugin/io.github.verygoodplugins.streamdeck-mcp.sdPlugin/: manifest.json  plugin.html  plugin.js
tests/: __init__.py  test_profile_manager.py  test_server.py
